rust/macros/tests/invalid/target/debug/deps/no_comma_rs-8ee903d23db4a87f.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/no_comma_rs-8ee903d23db4a87f: no-comma.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/no_comma_rs-8ee903d23db4a87f.d: no-comma.rs

no-comma.rs:
